# pygments-promql

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
promql/: __init__.py
pygments_promql/: __init__.py
tests/: example.promql  example_grafana_templated.promql  smoke_test.py  test_promql.py  test_tokens.py
