[project]
name = "pygments-promql"
version = "0.2.2"
description = "A PromQL lexer for Pygments"
authors = [
  {name = "Pablo Seminario", email = "pablo@seminar.io"}
]
readme = "README.md"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
keywords = ["pygments-lexer", "promql", "highlighting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "pillow>=10.3.0",
    "pygments>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/pabluk/pygments-promql"
Repository = "https://github.com/pabluk/pygments-promql.git"
Changelog = "https://github.com/pabluk/pygments-promql/releases"

[project.entry-points."pygments.lexers"]
PromQLLexer = "pygments_promql:PromQLLexer"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=7.4.3",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
